# aircraftdetective

./: .gitignore  CHANGES.md  LICENSE  README.md  __init__.py  env.yml  main.py  mkdocs.yaml  pyproject.toml
.github/workflows/: publish_pypi.yml  publish_testpypi.yml  test_package.yml  update_license.yml
aircraft_efficiency_detective/: __init__.py
aircraft_efficiency_detective/auxiliary/: dataframe.py
aircraft_efficiency_detective/calculations/: aerodynamics.py  weights.py
aircraft_efficiency_detective/dev/: test_pint_pandas.py
aircraft_efficiency_detective/processing/: databases.py  statistics.py
aircraftdetective/: __init__.py  links.toml
aircraftdetective/auxiliary/: dataframe.py
aircraftdetective/calculations/: aerodynamics.py  attribution.py  engines.py  main.py  overall.py  progress.py  weights.py
aircraftdetective/data/: __init__.py  links.toml
aircraftdetective/data/USDOT/: L_AIRCRAFT_TYPE.csv
aircraftdetective/dev/: hardcoded.py  investigation_databases.py  test_pint_pandas.py
aircraftdetective/processing/: databases.py  dataframes.py  engines_database.xlsx  engines_icao.xlsx  merged.xlsx  merged_with_family.xlsx  statistics.py
aircraftdetective/utility/: atmosphere.py  physics.py  plotting.py  statistics.py
auxiliary/: dataframe.py
calculations/: aircraft.py  engines.py
dev/: dev_decomposition.py  dev_engines.py  dev_figure_engines.py  dev_overall.py  dev_pandas.py  hardcoded.py  pint_pandas.py
dev/calibration/: ld_investigation.ipynb
dev/docs/: excel.py
dev/tutorials/: decomposition.ipynb  overall.ipynb
docs/: _requirements.txt  about.md  faq.md  index.md  installation.md  tutorial.ipynb
docs/_css/: extra.css
docs/_overrides/: main.html
docs/_static/: C45.xcf
docs/api/: attribution.md  engines.md  operations.md  overall.md
docs/api/calculations/: aerodynamics.md  decomposition.md  weight.md
docs/api/processing/: a4a.md  acftdb.md  databases.md  literature.md  usdot.md
docs/api/utility/: physics.md  statistics.md  tabular.md
docs/theory/: decomposition.md  engines.md
docs/theory/_data/: calibrated_engine_data_icao.xlsx  engine_calibration.xlsx
joss/: paper.bib  paper.md
notebooks/: engine_fuel_consumption.ipynb  main.ipynb  usdot_t2.ipynb
plotting/: plotting.py  weights.py
processing/: databases.py  literature.py  literature_data.py  statistical_data.py
src/aircraftdetective/: __init__.py  main.py
src/aircraftdetective/calculations/: aerodynamics.py  decomposition.py  engines.py  main.py  weight.py
src/aircraftdetective/data/: constants.py  hyperlinks.py
src/aircraftdetective/data/USDOT/: L_AIRCRAFT_TYPES.csv
src/aircraftdetective/processing/: a4a.py  acftdb.py  database.py  literature.py  operations.py  usdot.py
src/aircraftdetective/utility/: physics.py  plotting.py  statistics.py  tabular.py
tests/calculations/: test_aerodynamics.py  test_decomposition.py  test_engines.py  test_weight.py
tests/fixtures/: fixture_decomposition.xlsx  fixture_tsfc_data.xlsx  fixture_tsfc_no_data.xlsx  polynomials.py
tests/processing/: test_acftdb.py  test_operations.py  test_usdot.py
tests/processing/data/: fixture_t_schedule_t2.csv
tests/utility/: test_statistics.py  test_tabular.py
