[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aircraftdetective"
authors = [
  { name="Michael Weinold", email="michaelphilippweinold+aircraftdetective@gmail.com" }
]
maintainers = [
  { name="Michael Weinold", email="michaelphilippweinold+aircraftdetective@gmail.com" }
]
description = "A Python package for estimating the efficiency of commercial aircraft."
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "pint",
    "pint-pandas",
    "pandas",
    "numpy"
]

[project.urls]
source = "https://github.com/sustainableaviation/aircraftdetective"
homepage = "https://aircraftdetective.readthedocs.io"
tracker = "https://github.com/sustainableaviation/aircraftdetective/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "pytest",
    "pytest-cov",
    "python-coveralls",
]

[tool.setuptools]
include-package-data = true
packages = [
  "jetfuelburn",
  "jetfuelburn.aux",
  "jetfuelburn.data",
  "jetfuelburn.data.AIM2015",
  "jetfuelburn.data.PS2025",
]

[tool.setuptools.package-data]
"jetfuelburn.data" = ["*.csv"]
"jetfuelburn.data.AIM2015" = ["*.csv"]
"jetfuelburn.data.PS2025" = ["*.csv"]

[tool.setuptools.dynamic]
version = {attr = "aircraftdetective.__version__"} 
readme = {file = "README.md"}

[tool.pytest.ini_options]
testpaths = ["tests/*.py"] 